--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,3 @@
 PORT= 3000
 NODE_ENV = development
+USER = mongodb+srv://fatihadam:fatihadam@cluster0.1nto8.mongodb.net/?retryWrites=true&w=majority
